FRENCH: French RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73625 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -1,10 +1,10 @@
-﻿## Records Management Messages
+## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=Plan de fichier
 page.rmDocumentLibrary.description=Plan de fichier de gestion d'archivage \u00e9lectronique
-page.rmSearch.title=Recherche de document d'archives
-page.rmSearch.description=Page de recherche de document d'archives
+page.rmSearch.title=Recherche des documents d'archives
+page.rmSearch.description=Page de recherche des documents d'archives
 page.rmSiteDashboard.title=Tableau de bord de site de gestion d'archivage \u00e9lectronique
 page.rmSiteDashboard.description=Page du tableau de bord de site de gestion d'archivage \u00e9lectronique
 page.rmAudit.title=Journal d'audit
@@ -15,14 +15,14 @@ page.rmDispositionEdit.title=Modifier la planification de disposition
 page.rmDispositionEdit.description=Page de modification de la planification de disposition
 page.rmPermissions.title=G\u00e9rer les autorisations
 page.rmPermissions.description=Page de gestion des autorisations
-page.rmConsole.title=Console de gestion d'archivage \u00e9lectronique
-page.rmConsole.description=Console d'administration de la gestion d'archivage \u00e9lectronique
+page.rmConsole.title=Console d'archivage \u00e9lectronique
+page.rmConsole.description=Console d'administration d'archivage \u00e9lectronique
 
 ## Record Container Details Pages
-page.rmRecordSeriesDetails.title=D\u00e9tails de s\u00e9rie des documents d'archivage
-page.rmRecordSeriesDetails.description=Page de d\u00e9tails de s\u00e9rie des documents d'archives de la gestion d'archivage \u00e9lectronique
+page.rmRecordSeriesDetails.title=D\u00e9tails de s\u00e9rie des documents d'archives
+page.rmRecordSeriesDetails.description=Page de d\u00e9tails de s\u00e9rie de document d'archives de la gestion d'archivage \u00e9lectronique
 page.rmRecordCategoryDetails.title=D\u00e9tails de cat\u00e9gorie de document d'archives
-page.rmRecordCategoryDetails.description=Page de d\u00e9tails de cat\u00e9gorie de document d'archive de la gestion d'archivage \u00e9lectronique
+page.rmRecordCategoryDetails.description=Page de d\u00e9tails de cat\u00e9gorie de document d'archives de la gestion d'archivage \u00e9lectronique
 page.rmRecordFolderDetails.title=D\u00e9tails du dossier d'archives
 page.rmRecordFolderDetails.description=Page de d\u00e9tails de dossier d'archives de la gestion d'archivage \u00e9lectronique
 
@@ -35,7 +35,8 @@ label.set.security=S\u00e9curit\u00e9
 label.set.vitalRecord=Document d'archives essentiel
 label.set.disposition=Planification de disposition
 label.set.customMetadata=Propri\u00e9t\u00e9s personnalis\u00e9es
-
+label.hold.reason=Motif
+label.hold.delete.empty=Supprimer la suspension lorsque vide
 label.recordLevelDisposition=Appliqu\u00e9 \u00e0
 label.record=Document d'archives
 label.folder=Dossier d'archives
@@ -50,7 +51,7 @@ label.dispositionAsOfDate=Date de d\u00e9but de disposition
 label.physicalSize=Taille physique
 label.numberOfCopies=Nombre de copies
 label.storageLocation=Emplacement de stockage
-label.shelf=Etag\u00e8re
+label.shelf=\u00c9tag\u00e8re
 label.file=Fichier
 label.box=Bo\u00eete
 
@@ -63,13 +64,12 @@ label.menu.imap=IMAP
 label.menu.custom=Propri\u00e9t\u00e9s personnalis\u00e9es
 
 ## Buttons
-button.freeze.record=Geler le document d'archives
 button.reject.record=Rejeter le document d'archives
 button.request-info=Demander des informations
 
 ##\ufffdPop-up Messages
 message.confirm.delete.title=Confirmation de la suppression
-message.confirm.delete=\u00cates-vous s\u00fbr de vouloir supprimer ''{0}'' ?
+message.confirm.delete=Voulez-vous vraiment supprimer ''{0}''\u00a0?
 message.confirm.destroy.title=Confirmation de la destruction
 message.confirm.destroy=Voulez-vous vraiment d\u00e9truire ''{0}'' ?
 message.confirm.destroyMultiple=Voulez-vous vraiment d\u00e9truire les {0} fichiers s\u00e9lectionn\u00e9s ?
@@ -80,7 +80,7 @@ message.confirm.hide.record.title=Masquer le document d'archives
 message.confirm.hide.record=Vous masquez le document d'archives et il ne figurera plus dans votre site de collaboration.
 message.select=S\u00e9lectionner...
 message.pdf-record-fonts.title=Documents d'archives PDF\u00a0: v\u00e9rification de la police int\u00e9gr\u00e9e
-message.pdf-record-fonts.accession=V\u00e9rifie que les documentd d'archives PDF qui viennent de faire l'objet d'une action contiennent les polices int\u00e9gr\u00e9es applicables.
+message.pdf-record-fonts.accession=V\u00e9rifie que les documents d'archives PDF qui viennent de faire l'objet d'une action contiennent les polices int\u00e9gr\u00e9es applicables.
 message.pdf-record-fonts.transfer=V\u00e9rifie que les documents d'archives PDF qui viennent d'\u00eatre transf\u00e9r\u00e9s contiennent les polices int\u00e9gr\u00e9es applicables.
 message.pdf-record-fonts.unknown=Si le transfert ou l'acc\u00e8s comprend des documents d'archives PDF, v\u00e9rifiez que les polices int\u00e9gr\u00e9es applicables ont \u00e9t\u00e9 incluses.
 message.request-info-success=Informations demand\u00e9es avec succ\u00e8s
@@ -111,7 +111,6 @@ actions.edit-review-as-of-date=Modifier la date de v\u00e9rification
 actions.file-report=Archiver le rapport
 actions.link-to=Lier \u00e0...
 actions.file-to=Archiver dans...
-actions.freeze=Geler
 actions.manage-permissions=G\u00e9rer les autorisations
 actions.move-to=D\u00e9placer vers...
 actions.open-folder=Rouvrir le dossier
@@ -123,9 +122,7 @@ actions.split-email=Partager les pi\u00e8ces jointes d'e-mail
 actions.transfer=Transf\u00e9rer
 actions.transfer-complete=Terminer le transfert
 actions.undeclare=Rouvrir un document d'archives
-actions.undo-cutoff=Annuler la limite
-actions.unfreeze=D\u00e9geler
-actions.unfreeze-all=D\u00e9geler tout
+actions.undo-cutoff=Annuler la limitation
 actions.create-disposition-schedule=Cr\u00e9er une planification de disposition
 actions.upload-new-version=T\u00e9l\u00e9charger la nouvelle version
 actions.view-details=Afficher les d\u00e9tails
@@ -136,6 +133,11 @@ actions.reject=Rejeter
 actions.request-info=Demander des informations
 actions.file-destruction-report=G\u00e9n\u00e9rer un rapport de destruction
 actions.end-retention=Mettre fin \u00e0 la r\u00e9tention
+action.edit.hold=Modifier la suspension
+actions.delete.hold=Supprimer la suspension
+actions.add-to-hold=Ajouter \u00e0 la suspension
+actions.remove-from-hold=Retirer de la suspension
+actions.file-hold-report=G\u00e9n\u00e9rer un rapport de suspension
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u00e9l\u00e9ments s\u00e9lectionn\u00e9s
@@ -146,9 +148,9 @@ message.accession-complete.success=Acc\u00e8s \u00e0 ''{0}'' termin\u00e9
 message.close.failure=Impossible de fermer ''{0}''
 message.close.success=''{0}'' a \u00e9t\u00e9 ferm\u00e9 avec succ\u00e8s
 message.cutoff.failure=Impossible de limiter ''{0}''
-message.cutoff.success=''{0}'' a \u00e9t\u00e9 limit\u00e9 avec succ\u00e8s
+message.cutoff.success=''{0}'' a \u00e9t\u00e9 limit\u00e9
 message.declare.failure=Impossible de compl\u00e9ter le document d''archives ''{0}''
-message.declare.failure.more=Le document d''archives dispose de m\u00e9tadonn\u00e9es qui doivent \u00eatre compl\u00e9t\u00e9es.
+message.declare.failure.more=Le document d'archives dispose de m\u00e9tadonn\u00e9es qui doivent \u00eatre compl\u00e9t\u00e9es.
 message.declare.success=''{0}'' a \u00e9t\u00e9 compl\u00e9t\u00e9
 message.delete.failure=Impossible de supprimer ''{0}''
 message.delete.success=''{0}'' a \u00e9t\u00e9 supprim\u00e9 avec succ\u00e8s
@@ -164,16 +166,12 @@ message.edit-hold.success=La suspension a \u00e9t\u00e9 mise \u00e0 jour avec su
 message.edit-review-as-of-date.title=Modifier la date de v\u00e9rification
 message.edit-review-as-of-date.failure=Impossible de mettre \u00e0 jour la date de d\u00e9but de v\u00e9rification
 message.edit-review-as-of-date.success=La date de d\u00e9but de v\u00e9rification a \u00e9t\u00e9 mise \u00e0 jour pour ''{0}''
-message.freeze.reason=Motif :
-message.freeze.title=Motif du gel
-message.freeze.failure=Impossible de geler ''{0}''
-message.freeze.success=''{0}'' est d\u00e9sormais gel\u00e9
 message.open-folder.failure=Impossible d''ouvrir le dossier d''archives ''{0}''
 message.open-folder.success=Le dossier d''archives ''{0}'' \u00e9tait ouvert
 message.relinquish.failure=Impossible de lever la suspension
 message.relinquish.success=Suspension lev\u00e9e
-message.review-all.failure=Impossible de v\u00e9rifier les documents d'archives dans le dossier ''{0}''
-message.review-all.success=Les documents d'archives dans le dossier ''{0}'' ont \u00e9t\u00e9 v\u00e9rifi\u00e9s
+message.review-all.failure=Impossible de v\u00e9rifier les documents d''archives dans le dossier ''{0}''
+message.review-all.success=Les documents d''archives dans le dossier ''{0}'' ont \u00e9t\u00e9 v\u00e9rifi\u00e9s
 message.reviewed.failure=Impossible de v\u00e9rifier ''{0}''
 message.reviewed.success=''{0}'' a \u00e9t\u00e9 v\u00e9rifi\u00e9 avec succ\u00e8s
 message.split-email.failure=Impossible de s\u00e9parer les pi\u00e8ces jointes de ''{0}''
@@ -183,13 +181,9 @@ message.transfer.success=''{0}'' a \u00e9t\u00e9 transf\u00e9r\u00e9 avec succ\u
 message.transfer-complete.failure=Impossible de transf\u00e9rer ''{0}''
 message.transfer-complete.success=Le transfert de ''{0}'' est termin\u00e9
 message.undeclare.failure=Impossible de rouvrir ''{0}''
-message.undeclare.success=''{0}'' n''est plus un document d'archives complet
-message.undo-cutoff.failure=Impossible d''annuler la limite de ''{0}''
-message.undo-cutoff.success=Annuler la limite le ''{0}''
-message.unfreeze.failure=Impossible de d\u00e9geler ''{0}''
-message.unfreeze.success=''{0}'' a \u00e9t\u00e9 d\u00e9gel\u00e9 avec succ\u00e8s
-message.unfreeze-all.failure=Le contenu de la suspension ''{0}'' ne peut pas \u00eatre d\u00e9gel\u00e9
-message.unfreeze-all.success=Le contenu de la suspension ''{0}'' est d\u00e9sormais d\u00e9gel\u00e9
+message.undeclare.success=''{0}'' n''est plus un document d''archives complet
+message.undo-cutoff.failure=Impossible d''annuler la limitation de ''{0}''
+message.undo-cutoff.success=Annuler la limitation sur ''{0}''
 message.create-disposition-schedule.failure=Impossible de cr\u00e9er la planification de disposition pour ''{0}''
 message.create-disposition-schedule.success=La planification de disposition a \u00e9t\u00e9 cr\u00e9\u00e9e pour ''{0}''
 message.create-record.success=D\u00e9clar\u00e9 avec succ\u00e8s comme document d'archives
@@ -204,7 +198,10 @@ message.file-destruction-report.failure=Impossible de g\u00e9n\u00e9rer le rappo
 message.file-destruction-report.success=Rapport de destruction g\u00e9n\u00e9r\u00e9
 message.end-retention.failure=Impossible de mettre fin \u00e0 la r\u00e9tention
 message.end-retention.success=R\u00e9tention finie
-
+message.file-success=L''archivage du rapport en tant que ''{0}'' a r\u00e9ussi
+message.file-failure=L'archivage n'a pu \u00eatre effectu\u00e9
+message.file-hold-report.failure=Impossible de g\u00e9rer le rapport de suspension
+message.file-hold-report.success=Rapport de suspension g\u00e9n\u00e9r\u00e9
 
 ## File Plan Status Indicators
 status.rm-accession=Acc\u00e8s en attente
@@ -213,7 +210,7 @@ status.rm-closed=Ferm\u00e9
 status.rm-cutoff=Limiter
 status.rm-cutoff-folder=Limiter
 status.rm-destroyed=D\u00e9truit
-status.rm-frozen=Gel\u00e9
+status.rm-frozen=Suspendu
 status.rm-multi-parent=Li\u00e9 dans plusieurs dossiers d'archives
 status.rm-open=Ouvrir
 status.rm-transfer=Transfert en attente
@@ -227,6 +224,7 @@ status.rm-pdf-record=Document d'archives Pdf
 status.rm-scanned-record=Document d'archives num\u00e9ris\u00e9
 status.rm-web-record=Document d'archives Web
 status.rm-is-record=Document d'archives
+status.rules=Des r\u00e8gles sont appliqu\u00e9es au dossier
 # Exif
 status.exif=M\u00e9tadonn\u00e9es EXIF disponibles
 
@@ -252,7 +250,7 @@ label.publishInProgress=Publication en cours
 # IMAP model metadata fields
 label.imap.threadIndex=IMAP ThreadIndex
 label.imap.messageFrom=Message IMAP de
-label.imap.messageTo=Message IMAP \u00e0 
+label.imap.messageTo=Message IMAP \u00e0
 label.imap.messageCc=Cc le message IMAP
 label.imap.messageSubject=Objet du message IMAP
 label.imap.dateReceived=Date de r\u00e9ception IMAP
@@ -329,9 +327,9 @@ menu.select.recordCategories=Cat\u00e9gories de document d'archives
 
 ## Metadata Fields
 # Generic
-details.created.on=Cr\u00e9\u00e9  
+details.created.on=Cr\u00e9\u00e9 le
 details.created.by=Cr\u00e9\u00e9 par
-details.modified.on=Modifi\u00e9 
+details.modified.on=Modifi\u00e9 le
 details.modified.by=Modifi\u00e9 par
 details.by=Par
 details.size=Taille
@@ -346,7 +344,7 @@ details.category.vital-record-indicator=Identificateur de document d'archives es
 details.folder.identifier=Identificateur de dossier d'archives
 details.folder.vital-record-indicator=Identificateur de document d'archives essentiel
 # Record
-details.record.identifier=Identificateur de document d'archives unique
+details.record.identifier=Identificateur de document d'archive unique
 details.record.date-filed=Date d'archivage
 details.record.publication-date=Date de publication
 details.record.originator=\u00c9metteur
@@ -357,10 +355,12 @@ details.undeclared-record.info=Document d'archives incomplet
 details.transfer-container.title=Transf\u00e9rer {0}
 details.transfer-container.is-accession=<em>Remarque :</em> le type de transfert est Acc\u00e8s
 # Hold Container
-details.hold-container.title=Suspension cr\u00e9\u00e9e le {0}
-details.hold-container.title.date-format=dd mmmm yyyy '\u00e0' HH:MM:ss
-details.hold-container.reason=Motif de la suspension
-details.hold-container.reason.none=Non disponible
+details.hold.title=Suspension cr\u00e9\u00e9e le {0}
+details.hold.title.date-format=dd mmmm yyyy '\u00e0' HH:MM:ss
+details.hold.reason=Motif de la suspension
+details.hold.reason.none=Non disponible
+# Unfiled Records Container Child
+details.unfiled-record-folder.identifier=Identificateur de dossier
 
 ## File Upload (upload new version)
 label.filter-description=Type identique \u00e0 {0}
@@ -377,14 +377,17 @@ show.folders=Afficher {0} sous-dossier(s)
 
 details.undeclared-record.info=Document d'archives incomplet
 details.rejected-record.info=Document d'archives rejet\u00e9
-details.record.identifier=Identificateur de document d'archives unique
+details.record.identifier=Identificateur de document d'archive unique
 details.record.originator=\u00c9metteur
 details.record.originating-organization=Organisation \u00e9mettrice
 
 ## Create site dialog
 description.recordsManagementSite=Site de gestion d'archivage \u00e9lectronique
-title.recordsManagementSite=Gestion d'archivage \u00e9lectronique
+title.recordsManagementSite=Archivage \u00e9lectronique
 type.recordsManagementSite=Site de gestion d'archivage \u00e9lectronique
+compliance.standard=Standard
+compliance.dod5015=DoD 5015.2-STD
+label.compliance=Conformit\u00e9
 
 ## Console title
 link.managementConsole=Console de gestion
@@ -395,7 +398,7 @@ customise.requestInfo.text=Cr\u00e9e une t\u00e2che de workflow pour une liste d
 customise.sendEmail.text=Envoyer un e-mail avec l''objet ''{param.subject}'' \u00e0 des destinataires sp\u00e9cifi\u00e9s
 
 ## Records Management Console
-header.rm-console.label=Gestion d'archivage \u00e9lectronique...
+header.rm-console.label=Archivage \u00e9lectronique...
 header.rm-management.label=Console de gestion
 header.rm-management.description=Console de gestion
 
@@ -418,3 +421,34 @@ Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Veuillez s\u00e9l
 ## Forms
 form.control.object-picker.items-list.empty=Aucun \u00e9l\u00e9ment
 form.control.object-picker.items-list.loading=Chargement...
+
+## File-to substitution suggestions
+file-to.substitution.node.cm.title.label=Titre
+file-to.substitution.node.cm.description.label=Description
+file-to.substitution.node.cm.accessed.label=Dernier acc\u00e8s
+file-to.substitution.node.cm.created.label=Date de cr\u00e9ation
+file-to.substitution.node.cm.creator.label=Cr\u00e9ateur
+file-to.substitution.node.cm.modified.label=Date de modification
+file-to.substitution.node.cm.modifier.label=Modificateur
+file-to.substitution.node.cm.name.label=Nom
+file-to.substitution.node.rma.origionalName.label=Nom d'origine du n\u0153ud
+file-to.substitution.node.rma.dateFiled.label=Date d'archivage
+file-to.substitution.node.rma.location.label=Emplacement
+file-to.substitution.node.rma.dbUniquenessId.label=ID unique base de donn\u00e9es
+file-to.substitution.node.rma.identifier.label=Identificateur
+file-to.substitution.node.sys.node-uuid.label=ID n\u0153ud
+file-to.substitution.node.sys.store-identifier.label=ID entrep\u00f4t
+file-to.substitution.node.sys.store-protocol.label=Protocole de stockage
+file-to.substitution.date.day.short.label=Jour en abr\u00e9g\u00e9 (p.ex., lun)
+file-to.substitution.date.day.label=Jour (p.ex., lun)
+file-to.substitution.date.day.long.label=Jour en long (p.ex., lundi)
+file-to.substitution.date.day.number.label=Quanti\u00e8me (p.ex., 1)
+file-to.substitution.date.day.year.label=Jour de l'ann\u00e9e (p.ex., 216)
+file-to.substitution.date.month.short.label=Mois en abr\u00e9g\u00e9 (p.ex., jan)
+file-to.substitution.date.month.label=Mois (p.ex., jan)
+file-to.substitution.date.month.long.label=Mois en long (p.ex., janvier)
+file-to.substitution.date.month.number.label=Num\u00e9ro du mois (p.ex., 01)
+file-to.substitution.date.year.short.label=Ann\u00e9e en abr\u00e9g\u00e9 (p.ex., 14)
+file-to.substitution.date.year.label=Ann\u00e9e (p.ex., 14)
+file-to.substitution.date.year.long.label=Ann\u00e9e en long (p.ex., 2014)
+file-to.substitution.date.year.week.label=Num\u00e9ro de semaine (p.ex., 31)
