--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_fr.properties
@@ -1,7 +1,7 @@
 label.title=Journal d'audit
 label.title-for=Journal d''audit pour {0}
 label.from=De
-label.to=\u00c0
+label.to=\ufffd
 
 label.yes=Oui
 label.no=Non
@@ -11,47 +11,50 @@ button.view-record=Afficher le document d'archives
 label.clear-log-title=Effacer le journal d'audit ?
 label.clear-log-confirmation=Voulez-vous vraiment effacer le journal d'audit ?
 label.clearing-log-message=Veuillez patienter. Effacement du journal d'audit en cours.
-label.cleared-log-message=Journal d'audit effac\u00e9.
+label.cleared-log-message=Journal d'audit effac\ufffd.
 message.clear-log-fail = Erreur lors de l'effacement du journal d'audit.
 
-label.stopped-at=Journal d''audit arr\u00eat\u00e9 \u00e0 {0}
-label.stop-log-title=Arr\u00eater le journal d'audit ?
-label.stop-log-confirmation=Voulez-vous vraiment arr\u00eater le journal d'audit ?
-label.stopping-log-message=Veuillez patienter. Arr\u00eat du journal d'audit en cours.
-label.stopped-log-message=Journal d'audit arr\u00eat\u00e9.
-message.stop-log-fail = Erreur lors de l'arr\u00eat du journal d'audit.
+label.stopped-at=Journal d''audit arr\ufffdt\ufffd \ufffd {0}
+label.stop-log-title=Arr\ufffdter le journal d'audit ?
+label.stop-log-confirmation=Voulez-vous vraiment arr\ufffdter le journal d'audit ?
+label.stopping-log-message=Veuillez patienter. Arr\ufffdt du journal d'audit en cours.
+label.stopped-log-message=Journal d'audit arr\ufffdt\ufffd.
+message.stop-log-fail = Erreur lors de l'arr\ufffdt du journal d'audit.
 
-label.started-at=Journal d''audit d\u00e9marr\u00e8\u00e9 \u00e0 {0}
-label.start-log-title=D\u00e9marrer le journal d'audit ?
-label.start-log-confirmation=Voulez-vous vraiment d\u00e9marrer le journal d'audit ?
-label.starting-log-message=Veuillez patienter. D\u00e9marrage du journal d'audit en cours.
-label.started-log-message=Journal d'audit d\u00e9marr\u00e9.
-message.start-log-fail = Erreur lors du d\u00e9marrage du journal d'audit.
+label.started-at=Journal d''audit d\ufffdmarr\ufffd \ufffd {0}
+label.start-log-title=D\ufffdmarrer le journal d'audit ?
+label.start-log-confirmation=Voulez-vous vraiment d\ufffdmarrer le journal d'audit ?
+label.starting-log-message=Veuillez patienter. D\ufffdmarrage du journal d'audit en cours.
+label.started-log-message=Journal d'audit d\ufffdmarr\ufffd.
+message.start-log-fail = Erreur lors du d\ufffdmarrage du journal d'audit.
 
 label.button-clear=Effacer
-label.button-stop=Arr\u00eater
-label.button-start=D\u00e9marrer
+label.button-stop=Arr\ufffdter
+label.button-start=D\ufffdmarrer
 label.button-view-log=Afficher le journal complet
-label.button-specify=D\u00e9finir
+label.button-specify=D\ufffdfinir
 label.button-export=Exporter
-label.button-file-record=Fichier comme document d'archives
+label.button-file-record=Archiver comme document d'archives
 
-label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme document d'archives.
-message.file-log-fail=\u00c9chec de l'archivage du journal d'audit.
-label.file-record=Archiver l'document d'archives
+label.filed-log-message=Le journal d'audit a \ufffdt\ufffd archiv\ufffd comme document d'archives.
+message.file-log-fail=\ufffdchec de l'archivage du journal d'audit.
+label.file-record=Archiver le document d'archives
 
 
 label.timestamp=Horodatage
-label.property=Propri\u00e9t\u00e9
-label.previous-value=Valeur pr\u00e9c\u00e9dente
+label.property=Propri\ufffdt\ufffd
+label.previous-value=Valeur pr\ufffdc\ufffddente
 label.new-value=Nouvelle valeur
 label.name=Nom
 label.user=Utilisateur
-label.role=R\u00f4le
-label.event=\u00c9v\u00e9nement
+label.role=R\ufffdle
+label.event=\ufffdv\ufffdnement
 label.all=Tout
 label.identifier=Identificateur
-label.no-previous=<n\u00e9ant>
+label.no-previous=<Aucun>
 
 node.root=Plan de fichier
-title.single=S\u00e9lectionner l'emplacement du document d'archives d'audit
+title.single=S\ufffdlectionner l'emplacement du document d'archives d'audit
+
+label.select.recordfolder.title=S\ufffdlectionner le dossier d'archives
+label.select.recordfolder.text=Veuillez s\ufffdlectionner un dossier d'archives
