--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_fr.properties
@@ -1,28 +1,28 @@
-label.custom-metadata-title=M\u00e9tadonn\u00e9es personnalis\u00e9es
-label.create-metadata-title=Nouvelles m\u00e9tadonn\u00e9es
-label.edit-metadata-title=Modifier la propri\u00e9t\u00e9 des m\u00e9tadonn\u00e9es
+label.custom-metadata-title=M\ufffdtadonn\ufffdes personnalis\ufffdes
+label.create-metadata-title=Nouvelles m\ufffdtadonn\ufffdes
+label.edit-metadata-title=Modifier la propri\ufffdt\ufffd Metadata
 label.list-title=Objet
-label.custom-metadata=M\u00e9tadonn\u00e9es personnalis\u00e9es
-label.selection-list=Liste de s\u00e9lection
-label.label=Libell\u00e9
-label.use-list=Utiliser une liste de s\u00e9lection
+label.custom-metadata=M\ufffdtadonn\ufffdes personnalis\ufffdes
+label.selection-list=Liste de s\ufffdlection
+label.label=Tag
+label.use-list=Utiliser la liste de s\ufffdlection
 label.mandatory=Obligatoire
 
 label.datatype.unknown=Inconnu
 label.datatype.text=Texte
-label.datatype.boolean=Bool\u00e9en
+label.datatype.boolean=Bool\ufffden
 label.datatype.date=Date
 
-message.getpropertiesfail=Impossible d'extraire les d\u00e9finitions de propri\u00e9t\u00e9 personnalis\u00e9e.
-message.noproperties=Aucune propri\u00e9t\u00e9 personnalis\u00e9e d\u00e9finie.
-message.create-success=La nouvelle propri\u00e9t\u00e9 personnalis\u00e9e a \u00e9t\u00e9 ajout\u00e9e avec succ\u00e8s.
-message.create-failure=Impossible d'ajouter la nouvelle propri\u00e9t\u00e9 personnalis\u00e9e : {0}
-message.edit-success=La propri\u00e9t\u00e9 personnalis\u00e9e a \u00e9t\u00e9 enregistr\u00e9e avec succ\u00e8s.
-message.edit-failure=Impossible d''enregistrer la propri\u00e9t\u00e9 personnalis\u00e9e : {0}
-message.delete.title=Supprimer la propri\u00e9t\u00e9 personnalis\u00e9e
-message.delete.text=Voulez-vous vraiment supprimer : {0} ?
-message.delete-success=La propri\u00e9t\u00e9 personnalis\u00e9e a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s.
-message.delete-failure=Impossible de supprimer la propri\u00e9t\u00e9 personnalis\u00e9e : {0}
+message.getpropertiesfail=Impossible de r\ufffdcup\ufffdrer les d\ufffdfinitions de propri\ufffdt\ufffds personnalis\ufffdes.
+message.noproperties=Aucune propri\ufffdt\ufffd personnalis\ufffde n'a \ufffdt\ufffd d\ufffdfinie.
+message.create-success=L'ajout d'une nouvelle propri\ufffdt\ufffd personnalis\ufffde a r\ufffdussi.
+message.create-failure=Impossible d''ajouter la nouvelle propri\ufffdt\ufffd personnalis\ufffde\ufffd: {0}
+message.edit-success=L'enregistrement de la propri\ufffdt\ufffd personnalis\ufffde a r\ufffdussi.
+message.edit-failure=Impossible d''enregistrer la propri\ufffdt\ufffd personnalis\ufffde\ufffd: {0}
+message.delete.title=Supprimer la propri\ufffdt\ufffd personnalis\ufffde
+message.delete.text=Etes-vous s\ufffdr de vouloir supprimer : {0} ?
+message.delete-success=La propri\ufffdt\ufffd personnalis\ufffde a \ufffdt\ufffd supprim\ufffde.
+message.delete-failure=Impossible de supprimer la propri\ufffdt\ufffd personnalis\ufffde\ufffd: {0}.
 
-mandatory.true=Vrai
-mandatory.false=Faux
+mandatory.true=True
+mandatory.false=False
