--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
@@ -1,4 +1,4 @@
-﻿label.view-listofvalues-title=Listes
+label.view-listofvalues-title=Listes
 label.edit-listofvalue-title=Modifier les listes\u00a0: {0}
 label.values=Valeurs
 label.access=Acc\u00e8s
