--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_fr.properties
@@ -1,24 +1,24 @@
-label.view-references-title=Lier les relations
+label.view-references-title=Relations de liens
 label.title.parentchild={0}, {1}
 label.create-references-title=Nouvelle relation
-label.edit-references-title=Modifier la relation
+label.edit-references-title=Modifier relation
 label.general=G\u00e9n\u00e9ral
 label.type=Type
-label.bidirectional=Bidirectionnel
+label.bidirectional=Bidirectionnelle
 label.label=Libell\u00e9
 label.parentchild=Parent/Enfant
-label.source=Source
+label.source=Origine
 label.target=Cible
 
 button.newreference=Nouvelle relation
 
-message.confirm.removereference.title=Supprimer la relation
+message.confirm.removereference.title=Supprimer relation
 message.confirm.removereference.text=Voulez-vous vraiment supprimer ''{0}'' ?
-message.confirm.removereference.text.parentchild=Voulez-vous vraiment supprimer ''{0}, {1}'' ?
-message.removereference-success=La r\u00e9f\u00e9rence a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s.
+message.confirm.removereference.text.parentchild=Voulez-vous vraiment supprimer ''{0}, {1}''\u00a0?
+message.removereference-success=La r\u00e9f\u00e9rence a \u00e9t\u00e9 supprim\u00e9e.
 message.removereference-failure=Impossible de supprimer la relation.
-message.savingReference=Enregistrement de la relation...
+message.savingReference=Enregistrement en cours de la relation...
 message.loadreference-failure=Impossible de charger les donn\u00e9es de la relation.
-message.loading=Chargement des relations...
+message.loading=Chargement en cours des relations...
 message.empty=Il n'existe aucune relation.
 message.error=Impossible de charger les relations.
