--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_fr.properties
@@ -1,9 +1,9 @@
-label.user-rights=Droits d'utilisateur
-label.userid=Identifiant d'utilisateur
+label.user-rights=Droits des utilisateurs
+label.userid=ID utilisateur
 label.roles=R\u00f4les
 label.groups=Groupes
 label.name=Nom
 label.users=Utilisateurs
-label.no-users=Aucun utilisateur
-label.no-roles=Aucun r\u00f4le disponible
-label.no-groups=Aucun groupe disponible
+label.no-users=Pas d'utilisateur
+label.no-roles=Pas de r\u00f4le disponible
+label.no-groups=Pas de groupe disponible
