--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_fr.properties
@@ -1,10 +1,10 @@
 dataSet.header.title=Importer un ensemble de donn\u00e9es
 dataSet.label=Ensemble de donn\u00e9es
-dataSet.select.title=S\u00e9lectionnez un ensemble de donn\u00e9es et cliquez sur Importer pour charger les donn\u00e9es test.
+dataSet.select.title=S\u00e9lectionnez un ensemble de donn\u00e9es et cliquez sur Importer pour charger les donn\u00e9es de test.
 dataSet.select.label=S\u00e9lectionner un ensemble de donn\u00e9es
 dataSet.importButton.text=Importer
-dataSet.message.importing=Importation des donn\u00e9es test de gestion d'archivage \u00e9lectronique. Veuillez patienter...
-dataSet.message.import-ok=L'ensemble de donn\u00e9es a \u00e9t\u00e9 import\u00e9 avec succ\u00e8s.
-dataSet.message.import-fail=Impossible d'importer les donn\u00e9es test vers le site de gestion d'archivage \u00e9lectronique.
-dataset.not-rm-admin=Vous n'\u00eates pas autoris\u00e9 \u00e0 importer l'ensemble de donn\u00e9es.
-dataset.not-rm-site=Ce dashlet peut \u00eatre utilis\u00e9 pour les site RM uniquement.
+dataSet.message.importing=Importation en cours des donn\u00e9es de test de gestion des archives. Merci de patienter...
+dataSet.message.import-ok=L'ensemble de donn\u00e9es s\u00e9lectionn\u00e9 a pu \u00eatre import\u00e9.
+dataSet.message.import-fail=Impossible d'importer les donn\u00e9es de test sur le site d'archivage \u00e9lectronique.
+dataset.not-rm-admin=Vous ne disposez pas du niveau d'autorisation vous permettant d'importer un ensemble de donn\u00e9es.
+dataset.not-rm-site=Ce dashlet ne peut \u00eatre utilis\u00e9 que pour les sites RM\u00a0!
