--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_fr.properties
@@ -1,22 +1,23 @@
-header.action=\u00c9tapes
+header.action=Etapes
 header.period=Dur\u00e9e
 header.events=\u00c9v\u00e9nements
 header.event=\u00c9v\u00e9nement
-header.completion=Fin de l'\u00e9v\u00e9nement
+header.completion=\u00c9v\u00e9nement termin\u00e9
 
-label.required.fields=Champs obligatoires
+label.required.fields=Champs requis
 label.title.simple={0}
 label.title.noTime={0} {1}
-label.title.complex={0} apr\u00e8s {1} {2} (s)
+label.title.complex={0} apr\u00e8s {1} {2}(s)
 label.title.new=Nouvelle \u00e9tape
-label.transferTo=Transf\u00e9rer vers
-label.after=Apr\u00e8s une p\u00e9riode de 
-label.from=de
-label.when=Lorsqu'un \u00e9v\u00e9nement se produit
+label.ghostondestroy=Conserver apr\u00e8s suppression les m\u00e9tadonn\u00e9es de documents d'archives
+label.transferTo=Transf\u00e9rer \u00e0
+label.after=Apr\u00e8s une p\u00e9riode de
+label.from=\u00e0 partir de
+label.when=Lorsque l'\u00e9v\u00e9nement se produit
 label.description=Description de l'\u00e9tape
-label.select.location=S\u00e9lectionner l'emplacement...
+label.select.location=S\u00e9lectionnez un emplacement...
 
-icon.editaction=Modifier
+icon.editaction=Editer
 icon.deleteaction=Supprimer
 icon.deleteevent=Supprimer l'\u00e9v\u00e9nement
 
@@ -25,21 +26,21 @@ label.and=et
 label.automatic.true=Automatique
 label.automatic.false=Manuel
 
-relation.option.or=Selon l'\u00e9v\u00e9nement le plus r\u00e9cent
+relation.option.or=Quel que soit l'\u00e9v\u00e9nement qui se produit le premier
 relation.option.and=Lorsque tous les \u00e9v\u00e9nements se sont produits
 
-button.addevent=Ajouter l'\u00e9v\u00e9nement
+button.addevent=Ajouter un \u00e9v\u00e9nement
 button.createevent=Cr\u00e9er un \u00e9v\u00e9nement
-button.addaction=Ajouter l'\u00e9tape
-button.createaction=Ajouter l'\u00e9tape
+button.addaction=Ajouter une \u00e9tape
+button.createaction=Ajouter une \u00e9tape
 
 message.getActionFailure=Impossible d'obtenir la planification de disposition
-message.savingAction=Enregistrement de l'\u00e9tape
-message.saveActionFailure=L'\u00e9tape n'a pas pu \u00eatre enregistr\u00e9e
+message.savingAction=Enregistrement en cours de l'\u00e9tape
+message.saveActionFailure=Impossible d'enregistrer l'\u00e9tape
 title.deleteAction=Supprimer
-label.confirmDeleteAction=Voulez-vous vraiment supprimer l'\u00e9tape ?
-message.deletingAction=Suppression de l'\u00e9tape
-message.deleteActionSuccess=L'\u00e9tape a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s
+label.confirmDeleteAction=\u00cates-vous s\u00fbr de vouloir supprimer l'\u00e9tape\u00a0?
+message.deletingAction=Suppression en cours de l'\u00e9tape
+message.deleteActionSuccess=L'\u00e9tape a \u00e9t\u00e9 supprim\u00e9e
 message.deleteActionFailure=Impossible de supprimer l'\u00e9tape
-message.loadingSteps=Chargement des \u00e9tapes...
-message.noSteps=Il n'existe aucune \u00e9tape. Cliquez sur Ajouter l'\u00e9tape pour cr\u00e9er une \u00e9tape.
+message.loadingSteps=Chargement en cours des \u00e9tapes...
+message.noSteps=Il n'existe aucune \u00e9tape. Cliquer sur Ajouter une \u00e9tape pour en cr\u00e9er une.
