--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
@@ -6,7 +6,7 @@ label.recordCategoryIdentifier=Identificateur de cat\u00e9gorie de document d'ar
 label.recordFolderIdentifier=Identificateur de dossier d'archives
 label.vitalRecordIndicator=Identificateur de document d'archives essentiel
 label.dispositionAuthority=Droit de disposition
-label.noDispositionAuthority=N\u00e9ant
+label.noDispositionAuthority=Aucun
 label.dispositionSchedule=Planification de disposition
-label.noActions=Aucune \u00e9tape
+label.noActions=Pas d'\u00e9tapes
 label.noActionDescription=(aucune instruction)
