--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_fr.properties
@@ -1,17 +1,17 @@
-message.getpermissionsfail=Impossible d'extraire les autorisations du serveur.
-message.selectauthority=S\u00e9lectionner un utilisateur ou un groupe
-message.authoritypickerfail=Impossible de charger le composant \u00ab\u00a0Utilitaire de recherche de droit\u00a0\u00bb
-message.finish-success=Les autorisations ont \u00e9t\u00e9 mises \u00e0 jour avec succ\u00e8s.
-message.finish-failure=Impossible de mettre \u00e0 jour les autorisations : {0}
+message.getpermissionsfail=Impossible de r\ufffdcup\ufffdrer les droits d'acc\ufffds depuis le serveur.
+message.selectauthority=S\ufffdlectionnez un utilisateur ou un groupe
+message.authoritypickerfail=Impossible de charger l'outil de recherche des droits.
+message.finish-success=La mise \ufffd jour des droits d'acc\ufffds a r\ufffdussi.
+message.finish-failure=Impossible de mettre \ufffd jour les droits d''acc\ufffds\ufffd: ''{0}''
 
-label.title=G\u00e9rer les autorisations : {0}
-label.inherit=H\u00e9riter des autorisations
+label.title=G\ufffdrer les droits d''acc\ufffds : {0}
+label.inherit=H\ufffdriter des droits d'acc\ufffds
 label.readonly=Lecture seule
 label.readandfile=Lire et archiver
-label.inherited=h\u00e9rit\u00e9
+label.inherited=h\ufffdrit\ufffd
 label.local=local
-label.permissions=Autorisations
+label.permissions=Droits d'acc\ufffds
 label.actions=Actions
 label.usersgroups=Utilisateurs et groupes
 
-button.addUserGroup=Ajouter l'utilisateur ou le groupe
+button.addUserGroup=Ajouter un utilisateur ou un groupe
