--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
@@ -1,10 +1,10 @@
 label.title-new-reference = Nouvelle r\u00e9f\u00e9rence
 label.select = S\u00e9lectionner
-label.record-link = Lier au document d'archives
+label.record-link = Lier \u00e0 document d'archives
 label.record-rel = Relation
-label.name = Nom de la r\u00e9f\u00e9rence
-label.required = Champ obligatoire
+label.name = Nom r\u00e9f\u00e9rence
+label.required = Champs Obligatoire
 label.create=Cr\u00e9er
 label.cancel=Annuler
 label.fileplan= Plan de fichier
-message.createfail=Impossible de cr\u00e9er la r\u00e9f\u00e9rence
+message.createfail=Impossible de cr\u00e9er une nouvelle r\u00e9f\u00e9rence
