--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_fr.properties
@@ -1,14 +1,14 @@
 label.disabled=Actif
-label.executeAsynchronously=Ex\u00e9cuter en arri\u00e8re-plan
+label.executeAsynchronously=Ex\u00e9cuter en t\u00e2che de fond
 label.applyToChildren=R\u00e8gle appliqu\u00e9e aux sous-dossiers
-label.and=Tous les crit\u00e8res sont respect\u00e9s
-label.or=N'importe quel crit\u00e8re est respect\u00e9
+label.and=Tous les crit\u00e8res sont remplis
+label.or=Un des crit\u00e8res est rempli
 header.when=Quand
 header.if=Si
-header.unless=A moins que
-header.action=Ex\u00e9cuter l'action
-message.getRuleFailure=Impossible de charger les informations de r\u00e8gle
+header.unless=Sauf
+header.action=Ex\u00e9cuter une action
+message.getRuleFailure=Impossible de charger les informations de la r\u00e8gle
 message.deletingRule=Suppression de la r\u00e8gle...   
 message.confirm.delete.title=Supprimer la r\u00e8gle
-message.confirm.delete=Voulez-vous vraiment supprimer la r\u00e8gle ?
+message.confirm.delete=\u00cates-vous s\u00fbr de vouloir supprimer la r\u00e8gle ?
 message.loading=Chargement du plan de fichier...
