--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
@@ -1,24 +1,24 @@
-form.required.fields=Champs obligatoires
-header.newRule=Nouvelle r\u00e8gle
-header.editRule=Modifier la r\u00e8gle
+form.required.fields=Champs requis
+header.newRule=Nouvelle R\u00e8gle
+header.editRule=Modifier une r\u00e8gle
 header.general=G\u00e9n\u00e9ral
-header.defineRule=D\u00e9finir la r\u00e8gle
-header.otherOptions=Autres options
+header.defineRule=D\u00e9finir une r\u00e8gle
+header.otherOptions=Autres Options
 label.title=Nom
 label.description=Description
-label.disabled=D\u00e9sactiver la r\u00e8gle
-label.executeAsynchronously=Ex\u00e9cuter la r\u00e8gle en arri\u00e8re-plan
-label.applyToChildren=La r\u00e8gle s'applique aux sous-dossiers
-label.scriptRef=Si des erreurs se produisent, ex\u00e9cuter le script
+label.disabled=D\u00e9sactiver une r\u00e8gle
+label.executeAsynchronously=Ex\u00e9cuter la r\u00e8gle en t\u00e2che de fond
+label.applyToChildren=Appliquer la r\u00e8gle aux sous-dossiers
+label.scriptRef=En cas d'erreur, lancer un script
 label.selectScript=S\u00e9lectionner...
-label.and=Tous les crit\u00e8res sont respect\u00e9s
-label.or=N'importe quel crit\u00e8re est respect\u00e9
+label.and=Tous les crit\u00e8res sont remplis
+label.or=Un des crit\u00e8res est rempli
 header.when=Quand
 header.if=Si
-header.unless=\u00c0 moins que
-header.action=Ex\u00e9cuter l'action
+header.unless=Sauf
+header.action=Ex\u00e9cuter une action
 message.creating=Cr\u00e9ation de la r\u00e8gle...
 message.updating=Mise \u00e0 jour de la r\u00e8gle...
-message.persist-failure=Impossible de rendre la r\u00e8gle persistante
-message.createAnotherRule=La r\u00e8gle a \u00e9t\u00e9 cr\u00e9\u00e9e avec succ\u00e8s
-message.loading=Chargement du plan de fichier... 
+message.persist-failure=Impossible de sauvegarder la r\u00e8gle
+message.createAnotherRule=Succ\u00e8s de la cr\u00e9ation de la r\u00e8gle 
+message.loading=Chargement du plan de fichier...
