--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
@@ -1,4 +1,4 @@
-﻿message.loading=Chargement...
+message.loading=Chargement...
 message.empty=Aucun r\u00e9sultat trouv\u00e9.
 message.error=Erreur durant la recherche
 message.foundresults={0} \u00e9l\u00e9ment(s) trouv\u00e9(s).
@@ -24,17 +24,18 @@ label.records=Afficher les documents d'archives (termin\u00e9s seulement)
 label.undeclared=Inclure incomplet
 label.vital=Afficher les essentiels seulement
 label.recordFolders=Afficher les dossiers d'archives
-label.recordCategories=Afficher les cat\u00e9gories des documents d'archives
-label.frozen=Afficher les gel\u00e9s uniquement (exclus lorsque non s\u00e9lectionn\u00e9s)
+label.recordCategories=Afficher les cat\u00e9gories des documents d'archive
+label.frozen=Afficher uniquement les en suspens (exclus lorsque non s\u00e9lectionn\u00e9s)
 label.cutoff=Afficher les limit\u00e9s uniquement
 
 button.newsearch=Nouvelle recherche
 button.savesearch=Enregistrer la recherche...
 button.savedsearches=Recherches enregistr\u00e9es
 button.deletesearch=Supprimer la recherche
-button.print=Configuration de l'imprimante
+button.print=Configuration de l'impression
 button.screen=Configuration d'\u00e9cran
 button.export=Exporter
+button.add-to-hold=Ajouter \u00e0 la suspension
 
 # RM Results Common
 label.options=Options de r\u00e9sultats
@@ -47,7 +48,7 @@ label.sortAscending=Croissant
 label.sortDescending=D\u00e9croissant
 label.dueForReview=Arriv\u00e9e \u00e0 \u00e9ch\u00e9ance pour v\u00e9rification
 label.components=Composants
-label.recordSeries=S\u00e9rie de document d'archives
+label.recordSeries=S\u00e9rie de document d'archive
 label.parentFolder=Dossier parent
 
 
