--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
@@ -1,27 +1,27 @@
-header.singleUpload=Envoyer un fichier
-header.multiUpload=Envoyer un ou des fichiers
-header.singleUpdate=Mettre \u00e0 jour un fichier
+header.singleUpload=T\u00e9l\u00e9charger un fichier
+header.multiUpload=Ajout de fichier(s)
+header.singleUpdate=Mettre le fichier \u00e0 jour
 header.singleImport=Importer
 
 section.recordType=Choisir le type de document d'archives
 section.file=Choisir le ou les fichiers
 
-label.browse=S\u00e9lectionner le ou les fichiers \u00e0 envoyer
-label.multiUploadTip=Utilisez CTRL ou MAJ pour s\u00e9lectionner plusieurs fichiers.
-label.singleUpdateTip=Cliquez sur l''ic\u00f4ne pour envoyer une nouvelle version de {0}.
-label.noFiles=Aucun fichier \u00e0 afficher. Cliquez sur l'ic\u00f4ne pour s\u00e9lectionner le ou les fichiers \u00e0 envoyer.
-label.noFlash=Flash Player version 9.0.45 ou version sup\u00e9rieure n\u00e9cessaire pour utiliser ce composant. Vous pouvez t\u00e9l\u00e9charger la derni\u00e8re version de Flash Player depuis \
+label.browse=S\u00e9lectionner le(s) fichier(s) \u00e0 ajouter
+label.multiUploadTip=Utiliser CTRL ou SHIFT(Maj) pour s\u00e9lectionner des fichiers multiples
+label.singleUpdateTip=Cliquez sur l''ic\u00f4ne pour remplacer par une nouvelle version de {0}
+label.noFiles=Pas de fichier \u00e0 afficher, cliquer sur l'ic\u00f4ne pour s\u00e9lectionner un ou des fichiers \u00e0 ajouter
+label.noFlash=Flash Player version 9.0.45 ou plus r\u00e9cente est requis pour pouvoir utiliser ce composant. Vous pouvez t\u00e9l\u00e9charger la derni\u00e8re version de Flash Player depuis \
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 label.success=Succ\u00e8s
-label.failure=\u00c9chec
-button.upload=Envoyer un ou des fichiers
-label.uploadStatus=Statut : {0}/{1} envoy\u00e9s ({2} ont \u00e9chou\u00e9)
-message.cancelStatus=Envoi(s) annul\u00e9(s) ; {0} fichier(s) a/ont \u00e9t\u00e9 envoy\u00e9(s)
-message.zeroByteFileSelected=Vous avez s\u00e9lectionn\u00e9 le fichier {0}. Sa taille est nulle et il ne peut pas \u00eatre envoy\u00e9.
+label.failure=Echec
+button.upload=Ajout de fichier(s)
+label.uploadStatus=Statut : {0}/{1} ajout\u00e9(s) ({2} \u00e9chec(s))
+message.cancelStatus=T\u00e9l\u00e9chargement(s) annul\u00e9(s)\u00a0; {0} fichier(s) t\u00e9l\u00e9charg\u00e9s
+message.zeroByteFileSelected=Vous avez s\u00e9lectionn\u00e9 le fichier {0}. La taille de ce fichier est nulle et ce dernier ne peut pas \u00eatre ajout\u00e9.
 message.flashError.title=Erreur de communication Flash
-message.flashError.message=Le navigateur ne peut pas communiquer avec Flash Uploader. Vous pouvez continuer en mode monofichier ou actualiser la page pour red\u00e9marrer Flash.
+message.flashError.message=Le navigateur n'arrive pas \u00e0 communiquer avec l'injecteur Flash. Vous pouvez continuer en mode fichier unique ou rafra\u00eechir la page pour relancer Flash.
 
-section.version=Informations sur la version
+section.version=Informations de version
 label.version=Cette version a :
 label.minorVersion=Version mineure
 label.majorVersion=Version majeure
@@ -30,6 +30,6 @@ label.comments=Commentaires
 label.contentType=Type de contenu
 type.cm_content=Contenu
 
-label.recordType=Type(s) de(s) document(s) d'archives
-label.recordType.description=Remarque : Tous les fichiers list\u00e9s seront marqu\u00e9s comme type(s) choisi(s).
-recordType.default=Valeur par d\u00e9faut
+label.recordType=Type(s) de documents d'archives
+label.recordType.description=Remarque\u00a0: tous les fichiers de la liste seront marqu\u00e9s comme \u00e9tant du ou des types choisis.
+recordType.default=D\u00e9faut
