--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_fr.properties
@@ -3,40 +3,44 @@ header=Choisir le dossier de destination
 
 ## Copy To
 copy.node.root=Plan de fichier
+copy.node.unfiledroot=Documents d'archives unifi\ufffds
 copy.title.single=Copier {0} vers...
-copy.title.multi=Copier {0} \u00e9l\u00e9ments vers...
+copy.title.multi=Copier {0} \ufffdl\ufffdments vers...
 copy.button=Copier
-copy.message.no-files=Vous devez fournir au moins un fichier.
-copy.message.please-wait=Fichiers en cours de copie...
-copy.message.success={0} \u00e9l\u00e9ments ont \u00e9t\u00e9 copi\u00e9 avec succ\u00e8s
-copy.message.failure=Impossible de copier les \u00e9l\u00e9ments
+copy.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
+copy.message.please-wait=Copie des fichiers en cours...
+copy.message.success=Succ\ufffds de la copie pour {0} \ufffdl\ufffdments
+copy.message.failure=Impossible de copier les \ufffdl\ufffdments
 
 ## Move To
 move.node.root=Plan de fichier
-move.title.single=Transf\u00e9rer {0} vers...
-move.title.multi=Transf\u00e9rer {0} \u00e9l\u00e9ments vers...
-move.button=D\u00e9placer
-move.message.no-files=Vous devez fournir au moins un fichier.
-move.message.please-wait=Fichiers en cours de transfert...
-move.message.success={0} \u00e9l\u00e9ments d\u00e9plac\u00e9s
-move.message.failure=Impossible de d\u00e9placer les \u00e9l\u00e9ments
+move.node.unfiledroot=Documents d'archives unifi\ufffds
+move.title.single=D\ufffdplacer {0} vers...
+move.title.multi=D\ufffdplacer {0} \ufffdl\ufffdments vers...
+move.button=D\ufffdplacer
+move.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
+move.message.please-wait=D\ufffdplacement des fichiers en cours...
+move.message.success=Succ\ufffds du d\ufffdplacement pour {0} \ufffdl\ufffdments
+move.message.failure=Impossible de d\ufffdplacer les \ufffdl\ufffdments
 
 ## Link To
 link.node.root=Plan de fichier
-link.title.single=Lier {0} \u00e0...
-link.title.multi=Lier {0} \u00e9l\u00e9ments \u00e0...
-link.button=Lier
-link.message.no-files=Vous devez fournir au moins un fichier.
+link.node.unfiledroot=Documents d'archives unifi\ufffds
+link.title.single=Lier {0} \ufffd...
+link.title.multi=Lier {0} \ufffdl\ufffdments \ufffd...
+link.button=Lien
+link.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
 link.message.please-wait=Fichiers en cours de liaison...
-link.message.success={0} \u00e9l\u00e9ments li\u00e9s avec succ\u00e8s
-link.message.failure=Impossible de lier les \u00e9l\u00e9ments
+link.message.success=Succ\ufffds de la liaison de {0} \ufffdl\ufffdments
+link.message.failure=Impossible de lier les \ufffdl\ufffdments
 
 ## File To
 file.node.root=Plan de fichier
-file.title.single=Archiver {0} dans...
-file.title.multi=Archiver {0} \u00e9l\u00e9ments dans...
+file.node.unfiledroot=Documents d'archives unifi\ufffds
+file.title.single=Archiver {0} vers...
+file.title.multi=Archiver {0} \ufffdl\ufffdments vers...
 file.button=Fichier
-file.message.no-files=Vous devez fournir au moins un fichier.
+file.message.no-files=Un fichier au moins doit \ufffdtre pr\ufffdcis\ufffd
 file.message.please-wait=Fichiers en cours d'archivage...
-file.message.success={0} \u00e9l\u00e9ments archiv\u00e9s avec succ\u00e8s
-file.message.failure=Impossible d'archiver les \u00e9l\u00e9ments
+file.message.success=Succ\ufffds de l''archivage de {0} \ufffdl\ufffdments
+file.message.failure=Impossible d'archiver les \ufffdl\ufffdments
