--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_fr.properties
@@ -1,4 +1,4 @@
 header=Exporter
-label.transferFormat=S\u00e9lectionner le format de fichier pour l'exportation :
-label.acp=CAP (Alfresco Content Package)
+label.transferFormat=S\u00e9lectionnez le format de fichier pour l'exportation\u00a0:
+label.acp=Alfresco Content Package (ACP)
 label.zip=ZIP
