--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_fr.properties
@@ -1,20 +1,20 @@
-events.heading=\u00c9v\u00e9nements
-title.completedEvents=Complet
+events.heading=\ufffdv\ufffdnements
+title.completedEvents=Termin\ufffd
 title.incompleteEvents=Incomplet
-title.completeEvent=Compl\u00e9ter un \u00e9v\u00e9nement
-message.completingEvent=Ex\u00e9cution de l''\u00e9v\u00e9nement
-message.completeEventFailure=L'\u00e9v\u00e9nement n''a pas pu \u00eatre compl\u00e9t\u00e9
-message.revokingEvent=R\u00e9vocation d'\u00e9v\u00e9nement
-message.revokeEventFailure=L'\u00e9v\u00e9nement n'a pas pu \u00eatre r\u00e9voqu\u00e9
+title.completeEvent=Compl\ufffdter un \ufffdv\ufffdnement
+message.completingEvent=\ufffdv\ufffdnement en train d'\ufffdtre compl\ufffdt\ufffd
+message.completeEventFailure=L'\ufffdv\ufffdnement n'a pu \ufffdtre compl\ufffdt\ufffd
+message.revokingEvent=R\ufffdvocation d'\ufffdv\ufffdnement
+message.revokeEventFailure=Impossible de r\ufffdvoquer l'\ufffdv\ufffdnement
 label.automatic=Automatique
 label.manual=Manuel
-label.completedBy=Termin\u00e9 par
-label.completedAt=Termin\u00e9 le
-label.asOf=Date de d\u00e9but
+label.completedBy=Compl\ufffdt\ufffd par
+label.completedAt=Compl\ufffdt\ufffd le
+label.asOf=En date du
 label.noDispositionSchedule=Le cycle de vie de disposition n'existe pas.
-label.noEventsInDispositionSchedule=Aucun \u00e9v\u00e9nement pour l''\u00e9tape ''{0}''.
-label.completeDispositionSchedule=Cycle de vide de disposition termin\u00e9.
-label.dispositionScheduleAppliedToFolder=Planification de disposition appliqu\u00e9e au dossier d'archives parent avec la date de d\u00e9but : {0}.
-label.linkToFoldersDispositionSchedule=Afficher les \u00e9v\u00e9nements de dossier parent
-label.loadFailure=Impossible de charger les \u00e9v\u00e9nements
-button.completeEvent=Compl\u00e9ter un \u00e9v\u00e9nement
+label.noEventsInDispositionSchedule=Il n''y a aucun \ufffdv\ufffdnement pour l''\ufffdtape ''{0}''.
+label.completeDispositionSchedule=Le cycle de vie de disposition est complet
+label.dispositionScheduleAppliedToFolder=La planification de disposition a \ufffdt\ufffd appliqu\ufffde au dossier parent d''archives, avec comme en date\ufffd: ''{0}''
+label.linkToFoldersDispositionSchedule=Voir les \ufffdv\ufffdnements du dossier parent
+label.loadFailure=Impossible de charger les \ufffdv\ufffdnements
+button.completeEvent=Compl\ufffdter un \ufffdv\ufffdnement
