--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
@@ -1,84 +1,94 @@
-﻿## Buttons
-button.new-category=Nouvelle cat\u00e9gorie
+## Buttons
+button.new-category=Nouvelle cat\ufffdgorie
 button.new-folder=Nouveau dossier
+button.new-unfiledRecords-folder=Nouveau dossier
+button.new-hold=Nouvelle suspension
 button.upload=Fichier
+button.declare-record=D\ufffdclarer document d'archives
 button.import=Importer
 button.export-all=Exporter tout
-button.manage-permissions=G\u00e9rer les autorisations
+button.manage-permissions=G\ufffdrer les autorisations
 button.up=Haut
 button.customize=Personnaliser
 button.navbar.show=Afficher le fil d'Ariane
 button.navbar.hide=Cacher le fil d'Ariane
-button.fullwindow.enter=Pleine fen\u00eatre
-button.fullscreen.enter=Plein \u00e9cran
-button.fullscreen.exit=Quitter le plein \u00e9cran
-button.setDefaultView=D\u00e9finir ''{0}'' comme valeur par d\u00e9faut du dossier
-button.removeDefaultView=Supprimer ''{0}'' comme valeur par d\u00e9faut du dossier
-button.freeze.record=Geler le ou les documents d'archives
-button.electronic=\u00c9lectronique
-button.non-electronic=Non \u00e9lectronique
+button.fullwindow.enter=Pleine fen\ufffdtre
+button.fullscreen.enter=Plein \ufffdcran
+button.fullscreen.exit=Quitter le plein \ufffdcran
+button.setDefaultView=D\ufffdfinir ''{0}'' comme valeur par d\ufffdfaut du dossier
+button.removeDefaultView=Supprimer ''{0}'' comme valeur par d\ufffdfaut du dossier
+button.electronic=\ufffdlectronique
+button.non-electronic=Non \ufffdlectronique
 button.report=Rapport
-button.manage-rules=G\u00e9rer les r\u00e8gles
-button.options=Options...
+button.manage-rules=G\ufffdrer les r\ufffdgles
+button.options=Options
 
 ## Dialog labels
-label.new-rma_recordCategory.title=Nouvelle cat\u00e9gorie de document d'archives
-label.new-rma_recordCategory.header=D\u00e9tails de cat\u00e9gorie de document d'archives
+label.new-rma_recordCategory.title=Nouvelle cat\ufffdgorie de document d'archives
+label.new-rma_recordCategory.header=D\ufffdtails de cat\ufffdgorie de document d'archives
 label.new-rma_recordFolder.title=Nouveau dossier d'archives
-label.new-rma_recordFolder.header=D\u00e9tails du dossier d'archives
-label.new-rma_nonElectronicDocument.title=Document d'archives non \u00e9lectronique
-label.new-rma_nonElectronicDocument.header=D\u00e9tails du document d'archives
+label.new-rma_recordFolder.header=D\ufffdtails du dossier d'archives
+label.new-rma_hold.title=Nouvelle suspension
+label.new-rma_hold.header=D\ufffdtails de la nouvelle suspension
+label.new-rma_unfiledRecordFolder.title=Nouveau dossier
+label.new-rma_unfiledRecordFolder.header=D\ufffdtails du dossier
+label.new-rma_nonElectronicDocument.title=Document d'archives non \ufffdlectronique
+label.new-rma_nonElectronicDocument.header=D\ufffdtails du document d'archives
 
 ## Drop-down Menus
-menu.selected-items=\u00c9l\u00e9ments s\u00e9lectionn\u00e9s...
-menu.selected-items.deselect-all=D\u00e9s\u00e9lectionner tout
+menu.selected-items=\ufffdl\ufffdments s\ufffdlectionn\ufffds...
+menu.selected-items.deselect-all=D\ufffds\ufffdlectionner tout
 
-menu.selected-items.accession=Acc\u00e8s
-menu.selected-items.accession-complete=Confirmation d'acc\u00e8s
+menu.selected-items.accession=Acc\ufffds
+menu.selected-items.accession-complete=Confirmation d'acc\ufffds
 menu.selected-items.copy-to=Copier vers...
 menu.selected-items.cutoff=Limiter
 menu.selected-items.delete=Supprimer
-menu.selected-items.destroy=D\u00e9truire
+menu.selected-items.destroy=D\ufffdtruire
 menu.selected-items.export=Exporter
-menu.selected-items.link-to=Lier \u00e0...
+menu.selected-items.link-to=Lier \ufffd...
 menu.selected-items.file-to=Archiver dans...
-menu.selected-items.freeze=Geler
-menu.selected-items.move-to=D\u00e9placer vers...
-menu.selected-items.reviewed=V\u00e9rifi\u00e9
-menu.selected-items.transfer=Transf\u00e9rer
+menu.selected-items.move-to=D\ufffdplacer vers...
+menu.selected-items.reviewed=V\ufffdrifi\ufffd
+menu.selected-items.transfer=Transf\ufffdrer
 menu.selected-items.transfer-complete=Confirmation de transfert
-menu.selected-items.undo-cutoff=Annuler la limite
-menu.selected-items.unfreeze=D\u00e9geler
+menu.selected-items.undo-cutoff=Annuler la limitation
 
 ## Pop-up Messages
-message.file.type=Archivez-vous un document d'archives \u00e9lectronique ou non \u00e9lectronique ?
+message.file.type=Archivez-vous un document d'archives \ufffdlectronique ou non \ufffdlectronique ?
 message.file.type.title=Type d'archivage
-message.multiple-delete.failure=Impossible de supprimer les \u00e9l\u00e9ments
-message.multiple-delete.success=Suppression de {0} \u00e9l\u00e9ment(s) r\u00e9ussie
+message.multiple-delete.failure=Impossible de supprimer les \ufffdl\ufffdments
+message.multiple-delete.success=Suppression de {0} \ufffdl\ufffdment(s) r\ufffdussie
 title.multiple-delete.confirm=Confirmer l'action de suppression multiple
-message.multiple-delete.confirm=Etes-vous s\u00fbr de vouloir supprimer les {0} \u00e9l\u00e9ments suivants ?
-message.multiple-delete.please-wait=Veuillez patienter. Fichiers en cours de suppression...
-message.new-folder.failure=Impossible de cr\u00e9er le dossier
-message.new-category.failure=Impossible de cr\u00e9er la cat\u00e9gorie
-message.new-folder.success=Le dossier ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
-message.new-record.failure=Impossible de cr\u00e9er ''{0}''
-message.new-record.success=Le document d''archives ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
-message.load-top-level-assets.failure=Impossible d'exporter tout, car les actifs de niveau sup\u00e9rieur n'ont pas pu \u00eatre charg\u00e9s
-message.nothing-to-export=Rien \u00e0 exporter
+message.multiple-delete.confirm=Etes-vous s\ufffdr de vouloir supprimer les {0} \ufffdl\ufffdments suivants ?
+message.multiple-delete.please-wait=Veuillez patienter. Suppression des fichiers en cours...
+message.new-unknown.error=Le type ''{0}'' est inconnu\ufffd!
+message.new-category.failure=Impossible de cr\ufffder la cat\ufffdgorie ''{0}''
+message.new-folder.failure=Impossible de cr\ufffder le dossier ''{0}''
+message.new-record.failure=Impossible de cr\ufffder ''{0}''
+message.new-unfiledRecordsFolder.failure=Impossible de cr\ufffder le dossier ''{0}'' de documents d''archives non archiv\ufffds
+message.new-hold.failure=Impossible de cr\ufffder la suspension ''{0}''
+message.new-category.success=La cat\ufffdgorie ''{0}'' a \ufffdt\ufffd cr\ufffd\ufffde
+message.new-folder.success=Le dossier ''{0}'' a \ufffdt\ufffd cr\ufffd\ufffd
+message.new-record.success=Le document d''archives ''{0}'' a \ufffdt\ufffd cr\ufffd\ufffd
+message.new-unfiledRecordsFolder.success=Le dossier ''{0}'' de documents d''archives non archiv\ufffds a \ufffdt\ufffd cr\ufffd\ufffd
+message.new-hold.success=La suspension ''{0}'' a \ufffdt\ufffd cr\ufffd\ufffde
+message.load-top-level-assets.failure=Impossible d'exporter tout, car les actifs de niveau sup\ufffdrieur n'ont pas pu \ufffdtre charg\ufffds
+message.nothing-to-export=Rien \ufffd exporter
 
 ## Toolbar Modes
 description.path=
 description.path.more=
-description.savedsearch=R\u00e9sultat de recherche enregistr\u00e9e
+description.savedsearch=R\ufffdsultat de recherche enregistr\ufffde
 description.savedsearch.more=''{0}''
 description.transfers=Transferts
-description.transfers.more=(Documents d'archives en attente de transfert ou de fin d'acc\u00e8s)
+description.transfers.more=(Documents d'archives en attente de transfert ou de fin d'acc\ufffds)
 description.transfers.more.filterDisplay=visualisation de ''{0}'' actuellement
 description.holds=Suspensions actives
-description.holds.more=(Documents d'archives et dossiers d'archives gel\u00e9s)
+description.holds.more=(Documents d'archives et dossiers d'archives en suspension)
 description.holds.more.filterDisplay=visualisation de ''{0}'' actuellement
-description.unfiledRecords=Documents d'archives unifi\u00e9s
-description.unfiledRecords.more=(Documents d'archives non archiv\u00e9s)
+description.unfiledRecords=Documents d'archives unifi\ufffds
+description.unfiledRecords.more=(Documents d'archives non archiv\ufffds)
 description.unfiledRecords.more.filterDisplay=visualisation de ''{0}'' actuellement
 
 ## Browser dialogs
@@ -88,5 +98,5 @@ label.filter-description.zip=Package d'archivage (.zip)
 ## Pop-up Messages
 # General
 message.loading=Chargement du plan de fichier...
-message.error=Impossible d'acc\u00e9der au plan de fichier
-message.empty=Aucun \u00e9l\u00e9ment
+message.error=Impossible d'acc\ufffdder au plan de fichier
+message.empty=Aucun \ufffdl\ufffdment
