--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_fr.properties
@@ -1,4 +1,4 @@
-﻿## Title
+## Title
 header.savedsearch=Recherches enregistr\u00e9es
 
 rm.savedsearch.vitalRecordsName=Documents d'archives essentiels pour v\u00e9rification
@@ -7,14 +7,14 @@ rm.savedsearch.vitalRecordsDesc=Tous les documents d'archives n\u00e9cessitant a
 rm.savedsearch.incompleteRecordsName=Documents d'archives incomplets
 rm.savedsearch.incompleteRecordsDesc=Tous les documents d'archives incomplets.
 
-rm.savedsearch.cutoffRecordsName=Documents d'archives \u00e9ligibles pour limitation
-rm.savedsearch.cutoffRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour limitation.
+rm.savedsearch.cutoffRecordsName=Documents d'archives et dossiers d'archives \u00e9ligibles pour une limitation
+rm.savedsearch.cutoffRecordsDesc=Tous les documents d'archives et dossiers d'archives actuellement \u00e9ligibles pour une limitation.
 
-rm.savedsearch.transferRecordsName=Documents d'archives \u00e9ligibles pour transfert
-rm.savedsearch.transferRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour transfert.
+rm.savedsearch.transferRecordsName=Documents d'archives et dossiers d'archives \u00e9ligibles pour un transfert
+rm.savedsearch.transferRecordsDesc=Tous les documents d'archives et dossiers d'archives actuellement \u00e9ligibles pour un transfert.
 
-rm.savedsearch.destructionRecordsName=Documents d'archives \u00e9ligibles pour destruction
-rm.savedsearch.destructionRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour destruction.
+rm.savedsearch.destructionRecordsName=Documents d'archives et dossiers d'archives \u00e9ligibles pour une destruction
+rm.savedsearch.destructionRecordsDesc=Tous les documents d'archives et dossiers d'archives actuellement \u00e9ligibles pour une destruction.
 
-rm.savedsearch.frozenRecordsName=Documents d'archives gel\u00e9s
-rm.savedsearch.frozenRecordsDesc=Tous les documents d'archives gel\u00e9s.
+rm.savedsearch.frozenRecordsName=Documents d'archives et dossiers d'archives en suspens
+rm.savedsearch.frozenRecordsDesc=Tous les documents d'archives et dossiers d'archives actuellement en suspens.
