--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -1,5 +1,4 @@
-﻿header.action=Ex\u00e9cuter une action :
-button.freeze=Geler...
+header.action=Ex\u00e9cuter une action\u00a0:
 button.reject=Rejeter...
 button.requestInfo=Demander des informations...
 button.select-folder=S\u00e9lectionner...
@@ -14,25 +13,25 @@ dialog.destination.title=S\u00e9lectionner le dossier de destination
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
-form.control.date-picker.entry.date.format=d/M/yyyy
-form.control.date-picker.display.date.format=DD/MM/YYYY
+form.control.date-picker.entry.date.format=j/M/aaaa
+form.control.date-picker.display.date.format=JJ/MM/AAAA
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under time entry field
 form.control.date-picker.entry.time.format=HH:mm
-form.control.date-picker.display.time.format=HH:MM (24 Hour)
+form.control.date-picker.display.time.format=HH:MM (24\u00a0heures)
 
 record.folder.path.title=Cliquez pour afficher le texte d'aide pour le champ du chemin du dossier d'archives.
 record.folder.path.help=<p>Les substitutions suivantes sont autoris\u00e9es\u00a0:</p>\
    <p></p>\
-   <p>date.day.short = Sun</p>\
-   <p>date.day = Sun</p>\
-   <p>date.day.long = Sunday</p>\
+   <p>date.day.short = Dim</p>\
+   <p>date.day = Dim</p>\
+   <p>date.day.long = Dimanche</p>\
    <p>date.day.number = 7 (1-7)</p>\
    <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Aug</p>\
-   <p>date.month = Aug</p>\
-   <p>date.month.long = August</p>\
+   <p>date.month.short = Ao\u00fb</p>\
+   <p>date.month = Ao\u00fb</p>\
+   <p>date.month.long = Ao\u00fbt</p>\
    <p>date.month.number = 08 (01-12)</p>\
    <p>date.year.short = 13</p>\
    <p>date.year = 13</p>\
