--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_fr.properties
@@ -1,15 +1,15 @@
 header.rules=R\u00e8gles
-button.new-rule=Nouvelle r\u00e8gle
-button.copy-rule-from=Copier la r\u00e8gle depuis...
+button.new-rule=Nouvelle R\u00e8gle
+button.copy-rule-from=Copier une r\u00e8gle depuis...
 button.inherit.on=H\u00e9riter des r\u00e8gles
 button.inherit.off=Ne pas h\u00e9riter des r\u00e8gles
 message.inheritToggle-success-on=Les r\u00e8gles h\u00e9rit\u00e9es sont activ\u00e9es
-message.inheritToggle-success-off=Les r\u00e8gles h\u00e9rit\u00e9es ne sont pas activ\u00e9es
-menu.run=Ex\u00e9cuter les r\u00e8gles...
-menu.option.run=Ex\u00e9cuter les r\u00e8gles pour ce dossier
-menu.option.run-recursive=Ex\u00e9cuter les r\u00e8gles pour ce dossier et ses sous-dossiers
+message.inheritToggle-success-off=Les r\u00e8gles h\u00e9rit\u00e9es sont d\u00e9sactiv\u00e9es
+menu.run=Ex\u00e9cuter une r\u00e8gle...
+menu.option.run=Ex\u00e9cuter des r\u00e8gles pour ce dossier
+menu.option.run-recursive=Ex\u00e9cuter des r\u00e8gles pour ce dossier et ses sous-dossiers
 message.getRules-failure=Impossible de charger les r\u00e8gles
-message.runningRules=Ex\u00e9cution de la ou des r\u00e8gles...
-message.runRules-success=La ou les r\u00e8gles ont \u00e9t\u00e9 ex\u00e9cut\u00e9es avec succ\u00e8s
+message.runningRules=R\u00e8gle(s) en cours d'ex\u00e9cution...
+message.runRules-success=R\u00e8gle(s) ex\u00e9cut\u00e9e(s) avec succ\u00e8s
 message.runRules-failure=Impossible d'ex\u00e9cuter les r\u00e8gles
 filePlan.label = Plan de fichier
