--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
@@ -1,5 +1,5 @@
-﻿header.singleUpload=T\u00e9l\u00e9charger un fichier
-header.multiUpload.singleFile=T\u00e9l\u00e9charger un fichier dans {0}
+header.singleUpload=T\u00e9l\u00e9charger un fichier
+header.multiUpload.singleFile=T\u00e9l\u00e9charger un fichier vers {0}
 #header.multiUpload=Upload Files to {0}
 header.singleUpdate=Mettre le fichier \u00e0 jour
 header.error=Erreur
@@ -36,8 +36,8 @@ inmemory.uploadsize.exceeded=Votre navigateur ne prend pas en charge les ajouts 
 
 
 # RM Specific properties
-header.multiUpload=Document d'archives de fichier
-button.selectFiles=S\u00e9lectionner les documents d'archives \u00e0 archiver
+header.multiUpload=Documents d'archive de fichier
+button.selectFiles=S\u00e9lectionner les documents d'archive \u00e0 archiver
 
 header.import=Importer
 button.selectImportFile=S\u00e9lectionner le fichier d'importation
