--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_fr.properties
@@ -1,9 +1,7 @@
-header=S\u00e9lectionner le dossier d'archives de destination
-
+header=S\u00e9lectionnez le dossier de destination contenant des documents d'archive
 node.root=Plan de fichier
-title.single=Archiver le rapport {0} de transfert de fichier dans...
+title.single=Archiver le rapport vers...
 button.file=Archiver le rapport
-message.no-files=Vous devez fournir au moins un fichier.
-message.please-wait=Rapport de transfert en cours d'archivage..
-message.success=Le rapport de transfert a \u00e9t\u00e9 archiv\u00e9 avec succ\u00e8s comme {0}. 
-message.failure=L'archivage n'a pas pu \u00eatre ex\u00e9cut\u00e9.
+message.no-files=Un fichier au moins doit \u00eatre pr\u00e9cis\u00e9
+message.please-wait=Rapport en cours d'archivage...
+label.unfiled-records=Archiver le rapport vers les documents non archiv\u00e9s
